<resources>
    <string name="app_name">黑广播</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">设置</string>
    <string name="action_monitor">监测</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="company">成都零点科技有限公司</string>
    <string name="set_database">数据库</string>
    <string name="set_device">设备</string>
    <string name="set_about">关于</string>
    <string name="action_param">参数</string>
    <string name="action_spec">频谱</string>
    <string name="action_map">地图</string>
    <string name="open">打开</string>
    <string name="close">关闭</string>



    <string name="ButtonTextDot">.</string>
    <string name="ButtonTextOne">1</string>
    <string name="ButtonTextTwo">2</string>
    <string name="ButtonTextThree">3</string>
    <string name="ButtonTextFour">4</string>
    <string name="ButtonTextFive">5</string>
    <string name="ButtonTextSix">6</string>
    <string name="ButtonTextSeven">7</string>
    <string name="ButtonTextEight">8</string>
    <string name="ButtonTextNine">9</string>
    <string name="ButtonTextZero">0</string>
    <string name="ButtonTextDoubleZero">00</string>
    <string name="ButtonTextGHZ">GHz</string>
    <string name="ButtonTextMHZ">MHz</string>
    <string name="ButtonTextKHZ">KHz</string>
    <string name="ButtonTextback"><![CDATA[<<]]></string>
    <string name="ButtonTextClose">X</string>

    <string name="center_freq">中心频率</string>
    <string name="freq_bandwidth">频谱带宽</string>
    <string name="filter_bandwidth">滤波带宽</string>
    <string name="attenuation_control">衰减控制</string>
    <string name="demodulation_mode">解调模式</string>
    <string name="squelch_threshold">静噪门限</string>
    <string name="sound_title">声音</string>
    <string name="level_avg">电平平均</string>



    <string name="info_freq">频率</string>
    <string name="illegal_info_status">状态</string>
    <string name="illegal_info_time">时间</string>
    <string name="info_lon">经度</string>
    <string name="info_lat">纬度</string>
    <string name="info_address">地址</string>
    <string name="info_tag">说明</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="task_single_off">停止</string>
    <string name="task_single_on">开始</string>


    <string name="install">安装</string>
    <string name="setting">设置</string>
    <string name="install_tip">设备不支持中文语用播报，点击安装按钮完成中文语音的安装</string>
    <string name="setting_tip">中文语音包已经安装完成，点击设置，完成操作</string>
    <string name="error">不支持语音播报</string>
    <string name="connect">连接</string>
    <string name="radio_name">名称</string>
    <string name="info_starttime">开始时间</string>
    <string name="info_endtime">结束时间</string>
    <string name="info_span">带宽</string>
    <string name="info_power">发射功率</string>


</resources>
