<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context="com.ldkj.illegal_radio.activitys.SettingActivity">
    <RadioGroup
        android:id="@+id/radio"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        <RadioButton
            android:id="@+id/set_db"
            style="@style/style_imagebutton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:button="@mipmap/device"
            android:text="@string/set_database" />
        <RadioButton
            android:id="@+id/set_device"
            style="@style/style_imagebutton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:button="@mipmap/device"
            android:text="@string/set_device" />
        <RadioButton
            android:id="@+id/set_about"
            style="@style/style_imagebutton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:button="@mipmap/device"
            android:text="@string/set_about" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/frame" />
    <FrameLayout
        android:id="@+id/sett_fragment"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="3" />
</LinearLayout>
