<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/param_setting_padding_bottom"
    android:paddingLeft="@dimen/param_setting_padding_left"
    android:paddingRight="@dimen/param_setting_padding_right"
    android:paddingTop="@dimen/param_setting_padding_top"
    >

    <LinearLayout
        android:id="@+id/id_dialog_param_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        style="@style/StyleTable"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            style="@style/StyleTableTitle"
            android:text="@string/radio_name"/>
        <TextView
            android:id="@+id/id_radio_info_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/StyleTableValue"
            android:text="91.4MHz"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/id_dialog_param_freq"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        style="@style/StyleTable"
        >
        <TextView
            style="@style/StyleTableTitle"
            android:text="@string/info_freq"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"/>
        <TextView
            android:id="@+id/id_radio_info_freq"
            style="@style/StyleTableValue"
            android:text="91.4MHz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/id_dialog_param_span"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        style="@style/StyleTable"
        >
        <TextView
            style="@style/StyleTableTitle"
            android:text="@string/info_span"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"/>
        <TextView
            android:id="@+id/id_radio_info_span"
            style="@style/StyleTableValue"
            android:text="91.4MHz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/id_dialog_param_power"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        style="@style/StyleTable"
        >
        <TextView
            style="@style/StyleTableTitle"
            android:text="@string/info_power"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"/>
        <TextView
            android:id="@+id/id_radio_info_power"
            style="@style/StyleTableValue"
            android:text="91.4MHz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/id_dialog_param_lon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        style="@style/StyleTable"
        >
        <TextView
            style="@style/StyleTableTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/info_lon"/>
        <TextView
            android:id="@+id/id_radio_info_lon"
            style="@style/StyleTableValue"
            android:text="91.4MHz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/id_dialog_param_lat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/StyleTable"
        android:orientation="horizontal">
        <TextView
            style="@style/StyleTableTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/info_lat"/>
        <TextView
            android:id="@+id/id_radio_info_lat"
            style="@style/StyleTableValue"
            android:text="91.4MHz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/id_dialog_param_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/StyleTable"
        android:orientation="horizontal">
        <TextView
            style="@style/StyleTableTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/info_address"/>
        <TextView
            android:id="@+id/id_radio_info_address"
            style="@style/StyleTableValue"
            android:text="91.4MHz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/id_dialog_param_start_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        style="@style/StyleTable"
        >
        <TextView
            style="@style/StyleTableTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/info_starttime"/>
        <TextView
            android:id="@+id/id_radio_info_begin_time"
            style="@style/StyleTableValue"
            android:text="91.4MHz"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/id_dialog_param_end_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        style="@style/StyleTable"
        >
        <TextView
            style="@style/StyleTableTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/info_endtime"/>
        <TextView
            android:id="@+id/id_radio_info_end_time"
            style="@style/StyleTableValue"
            android:text="91.4MHz"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/id_dialog_param_explain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/StyleTable"
        android:orientation="horizontal">
        <TextView
            style="@style/StyleTableTitle"
            android:layout_width="match_parent"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:text="@string/info_tag"/>
        <TextView
            android:id="@+id/id_radio_info_tag"
            style="@style/StyleTableValue"
            android:text="91.4MHz"
            android:maxLines="3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />
    </LinearLayout>
</LinearLayout>